# Computergrafik

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
A1_Versuch1.2/: CMakeLists.txt  Versuch1.2.cpp
A1_Versuch1a/: CMakeLists.txt  Versuch1a.cpp
A1_Versuch1c/: CMakeLists.txt  Versuch1c.cpp
A2_Versuch2/: CMakeLists.txt  Versuch2.cpp
A3_Normalenvektoren/: A3_Normalenvektoren.cpp  CMakeLists.txt
A4_Cubemapping/: A4_Cubemapping.cpp  CMakeLists.txt
A5_PCSS/: A5_PCSS.cpp  CMakeLists.txt
A5_Raytracing/: A5_Raytracing.cpp  CMakeLists.txt
A5_Raytracing/shaders/: closesthit.spv
dependencies/utils/: model.cpp  model.h
